kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stack-io
spec:
  type: ClusterIP
  selector:
    app: stack-io
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
