kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: stack-io
spec:
  ingressClassName: nginx
  rules:
  - host: stack-io.local
    http:
      paths:
      - backend:
          service:
            name: stack-io
            port:
              name: http
        path: /(.*)
        pathType: Prefix
